--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
         </div>
         <div class="container start-tegisto"
             style="background-color: #281F62; border-radius: 10px; height: 272px; ">
-            <div class="row">
-                <div class="col-6 justify-content-center" >
+            <div class="row ">
+                <div class="col-md-6 justify-content-center" >
                     <h3> Start an easy, safe and successful trading journey on Tegisto</h3>
                     <p>First step for your limitless future</p>
                 </div>
-                <div class="col-6 start-tegisto-right">
+                <div class="col-md-6 start-tegisto-right">
                     <img class="position-absolute row start-tegisto-gradient" src="assets/image/Ornament-effect.svg">
                     <span class="launch-btn row"><a href="https://tegisto.io/app/launchpad"></a></span>
                 </div>
